--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 title: Jordan Lekeufack
-logo: /docs/assets/images/git_profile.jog
+logo: /docs/assets/images/git_profile.jpg
 theme: jekyll-theme-minimal
